Archive2/d6/6f68e3586ed29b/output
In file included from main.cpp:1:0:
/usr/include/c++/4.8/atomic: In instantiation of 'struct std::atomic<A>':
main.cpp:6:7:   required from 'void test() [with T = A]'
main.cpp:15:13:   required from here
/usr/include/c++/4.8/atomic:167:7: error: function 'std::atomic<_Tp>::atomic() [with _Tp = A]' defaulted on its first declaration with an exception-specification that differs from the implicit declaration 'std::atomic<A>::atomic()'
       atomic() noexcept = default;
       ^
